[package]
name = "static-math"
version = "0.1.8"
authors = ["elsuizo <mnoblia@disroot.org>"]
edition = "2018"
description = "Fast mathematical operations with static arrays, without `unsafe` code"
repository = "https://github.com/elsuizo/static-math"
documentation = "https://docs.rs/static-math/"
license = "MIT"
keywords = ["linear-algebra",  "matrix-operations", "quaternions", "gamedev", "simulations"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num = "0.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_inverse"
harness = false
