[package]
name = "static-math"
version = "0.1.9"
authors = ["elsuizo <mnoblia@disroot.org>"]
edition = "2018"
description = "Fast mathematical operations with static arrays, without `unsafe` code"
repository = "https://github.com/elsuizo/static-math"
documentation = "https://docs.rs/static-math/"
license = "MIT"
keywords = ["linear-algebra",  "matrix-operations", "quaternions", "robotics", "dual-quaternions"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num = { version = "0.4", default-features = false}

[features]
default = ["num/std"]
no-std = ["num/libm"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_inverse"
harness = false
